# event-sourcing-kata

./: README.md
cpp/: CMakeLists.txt
cpp/src/core/: AggregateRoot.hpp  Event.hpp  EventStore.hpp  Overloaded.hpp  StoredEvent.hpp
cpp/src/examples/: CounterAggregate.cpp  CounterAggregate.hpp
cpp/tests/: CounterAggregate.test.cpp
dotnet/: EventSourcingKata.csproj  EventSourcingKata.sln
dotnet/src/: GlobalSuppressions.cs
dotnet/src/Core/: AggregateRoot.cs  Event.cs  IEventStore.cs
dotnet/src/Examples/: CounterAggregate.cs
dotnet/tests/: CounterAggregateTests.cs
java/: settings.gradle
java/gradle/: libs.versions.toml
java/lib/: build.gradle
java/lib/src/main/java/no/ketilaa/kata/events/sourcing/: AggregateRoot.java  Event.java  EventStore.java
java/lib/src/test/java/no/ketilaa/kata/events/sourcing/: CounterAggregate.java  CounterAggregateTest.java
node/: package-lock.json  package.json  tsconfig.json
node/src/core/: AggregateRoot.ts  Event.ts  EventStore.ts
node/src/examples/: CounterAggregate.ts
node/tests/examples/: CounterAggregate.test.ts
